[gd_scene load_steps=59 format=2]

[ext_resource path="res://assets/Characters/MainCharacter/adventurer-one-sheet.png" type="Texture" id=1]
[ext_resource path="res://src/player/Player.gd" type="Script" id=2]
[ext_resource path="res://Scripts/BottomHUD.gd" type="Script" id=3]
[ext_resource path="res://Scripts/UpperHUD.gd" type="Script" id=4]
[ext_resource path="res://assets/HUD/Elements/Ice.png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/Weapon/Bow.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/heart.png" type="Texture" id=7]
[ext_resource path="res://assets/HUD/Bar/Green.png" type="Texture" id=9]
[ext_resource path="res://assets/Characters/MainCharacter/mana_bar.png" type="Texture" id=10]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.0
height = 16.0

[sub_resource type="Animation" id=2]
resource_name = "Death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 59, 60, 61, 62, 63, 64, 65, 66, 67, 68 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163, 164 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/HitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/HitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.4, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack_archer"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 189, 190, 191, 192, 196, 197, 198, 199, 203 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "shot_arrow"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack_glove"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 119, 120, 121, 122 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/HitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=51]
resource_name = "attack_glove2"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 128, 129, 130, 131, 132, 134, 135, 136, 137 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Area2D/HitCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=10]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "attack1"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "attack_archer"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "attack_glove"

[sub_resource type="AnimationNodeAnimation" id=52]
animation = "attack_glove2"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachine" id=42]
states/Hit/node = SubResource( 12 )
states/Hit/position = Vector2( 226, -50 )
states/attack1/node = SubResource( 14 )
states/attack1/position = Vector2( -59, 102 )
states/attack2/node = SubResource( 16 )
states/attack2/position = Vector2( 14, 5 )
states/attack_archer/node = SubResource( 17 )
states/attack_archer/position = Vector2( 191, 218 )
states/attack_glove/node = SubResource( 18 )
states/attack_glove/position = Vector2( 14, 161 )
states/attack_glove2/node = SubResource( 52 )
states/attack_glove2/position = Vector2( 524, 161 )
states/fall/node = SubResource( 19 )
states/fall/position = Vector2( 791, 92 )
states/idle/node = SubResource( 20 )
states/idle/position = Vector2( 369, 48 )
states/jump/node = SubResource( 21 )
states/jump/position = Vector2( 614, 5 )
states/run/node = SubResource( 22 )
states/run/position = Vector2( 335, 195 )
transitions = [ "idle", "attack1", SubResource( 23 ), "idle", "jump", SubResource( 24 ), "jump", "idle", SubResource( 25 ), "idle", "run", SubResource( 26 ), "run", "idle", SubResource( 27 ), "jump", "fall", SubResource( 28 ), "attack2", "idle", SubResource( 29 ), "idle", "attack2", SubResource( 30 ), "attack1", "idle", SubResource( 31 ), "fall", "idle", SubResource( 32 ), "attack_glove", "idle", SubResource( 36 ), "idle", "attack_glove", SubResource( 37 ), "attack_archer", "idle", SubResource( 38 ), "idle", "attack_archer", SubResource( 39 ), "Hit", "idle", SubResource( 40 ), "idle", "Hit", SubResource( 41 ), "attack_glove2", "idle", SubResource( 53 ), "idle", "attack_glove2", SubResource( 54 ) ]
start_node = "idle"
graph_offset = Vector2( -211, -44 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=43]

[sub_resource type="RectangleShape2D" id=44]

[sub_resource type="StyleBoxEmpty" id=45]

[sub_resource type="Animation" id=47]
resource_name = "First_Flower"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Mana:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=48]
resource_name = "Last_Flower"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Mana:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16 ]
}

[sub_resource type="Animation" id=49]
resource_name = "Second_Flower"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Mana:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=50]
resource_name = "Third_Flower"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Mana:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 0, 0, 0, 0.156863 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 7
vframes = 31
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.875 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 2 )
anims/Hit = SubResource( 3 )
anims/attack1 = SubResource( 4 )
anims/attack2 = SubResource( 5 )
anims/attack_archer = SubResource( 6 )
anims/attack_glove = SubResource( 7 )
anims/attack_glove2 = SubResource( 51 )
anims/fall = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/jump = SubResource( 10 )
anims/run = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 42 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 43 )

[node name="Area2D" type="Area2D" parent="."]

[node name="HitCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 16, 2.875 )
shape = SubResource( 44 )
disabled = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Lives" type="Panel" parent="HUD"]
margin_left = 11.0
margin_top = 14.0
margin_right = 118.0
margin_bottom = 46.0
custom_styles/panel = SubResource( 45 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Live_1" type="TextureRect" parent="HUD/Lives"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Live_2" type="TextureRect" parent="HUD/Lives"]
margin_left = 38.0
margin_right = 70.0
margin_bottom = 32.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Live_3" type="TextureRect" parent="HUD/Lives"]
margin_left = 75.0
margin_right = 107.0
margin_bottom = 32.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mana" type="Sprite" parent="HUD/Lives"]
position = Vector2( 500, 50 )
scale = Vector2( 0.2, 0.2 )
z_index = 1
texture = ExtResource( 10 )
hframes = 4
vframes = 5
frame = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Lives"]
anims/First_Flower = SubResource( 47 )
anims/Last_Flower = SubResource( 48 )
anims/Second_Flower = SubResource( 49 )
anims/Third_Flower = SubResource( 50 )

[node name="Mana_Bar" type="TextureRect" parent="HUD/Lives"]
margin_left = 391.0
margin_top = 44.0
margin_right = 590.0
margin_bottom = 59.0
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bottom" type="Panel" parent="HUD"]
margin_left = 10.0
margin_top = 505.0
margin_right = 182.0
margin_bottom = 592.0
custom_styles/panel = SubResource( 46 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="TextureRect" parent="HUD/Bottom"]
margin_left = 14.0
margin_top = 3.0
margin_right = 78.0
margin_bottom = 67.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="TextureRect" parent="HUD/Bottom"]
margin_left = 98.0
margin_top = 2.0
margin_right = 162.0
margin_bottom = 66.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 24, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -70 )
current = true
zoom = Vector2( 0.4, 0.4 )
limit_smoothed = true
drag_margin_v_enabled = true
drag_margin_top = 1.0
drag_margin_bottom = 1.0
editor_draw_drag_margin = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
